--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Lcaballero</title>
-    <link rel="stylesheet" href="/public/js/main.css">
-    <link rel="stylesheet" href="/public/js/appbar.css">
+    <link rel="stylesheet" href="/public/css/main.css">
+    <link rel="stylesheet" href="/public/css/appbar.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="main">
@@ -18,8 +20,11 @@
             </div>
         </div>
         <div class="main-Container">
-            <div class="">
-
+            <div class="image-Container">
+                <div class="img-circle">
+                    <img src="/public/images/imgexample.png" class="img-profile" alt="">
+                </div>
+                
             </div>
         </div>
     </div>
