--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                     <div class="card-profile">
                         <div class="profile-body" style="color:white;">
                             Mi nombres es Luis Caballero
+                            SITIO EN DESARROLLO
                         </div>
                     </div>
                 </div>
